# chpm

./: Cargo.toml  README.md
.github/scripts/: sync-arch.sh  sync-debian.sh
.github/workflows/: sync.yml
src/: lib.rs  main.rs
