[package]
name = "chiral"
version = "1.3.1"
edition = "2021"

[dependencies]
flate2 = "1.0"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
libc = "0.2"
crossterm = "0.27"
